<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fulbito</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_usuario">LoginUsuarioActivity</string>
    <string name="title_activity_mod_usuario">ModUsuarioActivity</string>
    <string name="txtLogin">Welcome again</string>
    <string name="txtRegistrar">Are you new?</string>
    <string name="txtCampoCorreoElectronico">E-mail</string>
    <string name="txtCampoContrasena">Password</string>
    <string name="txtBotonIngresar">Login with Fulbito</string>
    <string name="txtCampoAlias">Nick</string>
    <string name="txtCampoConfirmarContrasena">Confirm password</string>
    <string name="txtBotonRegistrarme">signup</string>
    <string name="txtLoginTwitter">Login with Twitter</string>
    <string name="txtLoginFacebook">Login with Facebook</string>
    <string name="title_activity_registrar_usuario">RegistrarUsuarioActivity</string>
    <string name="txtAliasVacio">You must enter your Alias.</string>
    <string name="txtLargoAlias">Their alias must be between 6 and 20 characters.</string>
    <string name="txtCorreoVacio">You must enter an Email. </string>
    <string name="txtCorreoInvalido">You must enter a valid Email.</string>
    <string name="txtContrasenaVacio">You must enter a password.</string>
    <string name="txtLargoContrasena">The password must be between 6 and 20 characters.</string>
    <string name="txtContrasenaConfirmadaVacia">You must confirm the password entered.</string>
    <string name="txtLargoContrasenaConfirmada">The password must be between 6 and 20 characters.</string>
    <string name="txtContrasenasDistintas">Passwords must be equal.</string>
    <string name="txtCamposVacios">Complete the fields empty.</string>
    <string name="txtRevisarCampos">Check the entered fields.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="txtMenuLateral">Menu</string>
    <string name="title_activity_inicio">InicioActivity</string>
	<string name="txtOlvidoContrasena">Forgot your password?</string>
    <string name="txtRecuperarContrasena">Recover password</string>
    <string name="txtBotonBuscarFoto">Search image</string>
	<string name="txtBotonSacarFoto">Take a pic</string>
	<string name="txtImgFotoPerfilDesc">Profile picture</string>
	<string name="txtBotonModificarPassword">Change Password</string>
	<string name="txtBotonGuardarCambios">Save Profile</string>
	<string name="txtCampoFechaNacimiento">Date of birth</string>
	<string name="txtCampoTelefono">Phone</string>		
	
	<!-- Intefaz crear partido -->
	<string name="txtNombrePartido">Name of match</string>
	<string name="txtFechaPartido">Date</string>
	<string name="txtHoraPartido">Hour</string>
	<string name="txtTipoPartido">Kind of match</string>
	<string name="txtUbicacionPartido">Field/Place</string>
	<string name="txtCantidadJugadores">Number of players</string>
	<string name="txtVisibilidad">Visibility of the match</string>
	<string name="txtCrearPartido">Create match</string>
	<string name="txtFechaHoraPartido">Date/Hour</string>
	<string name="txtPartidoPublico">Public</string>
	<string name="txtPartidoPrivado">Private</string>
	<string name="txtYolosArmo">I build the teams</string>
	<string name="txtPanQueso">One and one selection</string>
	<string name="txtDosJugadores">Two players choose</string>
	<string name="txtAleatorio">Random selection</string>
	
	<!-- Mensajes de error -->
	<string name="errMsjSinConexion">No internet connection. Please check your connection.</string>
	<string name="errMsjLoginOffline">No internet connection. The application starts in offline mode.</string>
	<string name="errMsjLogin">Failed to login.</string>
	<string name="errMsjRegistrarUsuario">Failed to register user.</string>
	<string name="errMsjUbicacionActual">Failed to get current location.</string>
	
	<!-- GPS Tracker -->
	<string name="GpsTrackerDialogTitle">GPS settings.</string>
	<string name="GpsTrackerDialogMsj">GPS is not enabled. Do you want to go to settings menu?</string>
	<string name="GpsTrackerDialogSettings">Settings</string>
	<string name="GpsTrackerDialogCancel">Cancel</string>
</resources>
