<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/txtVwLogin"
        style="@style/TxtVwInicio"
        android:text="@string/txtLogin" />
	
	<Button
	    android:id="@+id/btnInicioIngresar"	    
	    style="@style/BtnInicio"   	    
	    android:text="@string/txtBotonIngresar" />
	
	<LinearLayout
	    android:id="@+id/loBotonTwitter"	   	   
	    style="@style/BtnRedSocial" 	    
	    android:background="@drawable/boton_twitter" >
	
	    <ImageView
	        android:id="@+id/imageView1"
	        style="@style/ImgRedSocial"
	        android:src="@drawable/icono_twitter" />

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:padding="0dp" >

	        <TextView
	            android:id="@+id/textView1"
	            android:text="@string/txtLoginTwitter"
	            style="@style/TxtRedSocial" />

	    </RelativeLayout>
	
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/loBotonFacebook"	    
	    style="@style/BtnRedSocial"   	    
	    android:background="@drawable/boton_facebook" >
	
	    <ImageView
	        android:id="@+id/imageView2"
	        style="@style/ImgRedSocial"
	        android:src="@drawable/icono_facebook" />

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:padding="0dp" >

	        <TextView
	            android:id="@+id/textView2"
	            android:text="@string/txtLoginFacebook"
	            style="@style/TxtRedSocial" />

	    </RelativeLayout>
	
	</LinearLayout>          

	<TextView
		android:id="@+id/txtVwRegistrar"
		style="@style/TxtVwInicio"
		android:text="@string/txtRegistrar" />
	
	<Button
	    android:id="@+id/btnInicioRegistrar"	   
	   	style="@style/BtnInicio"   	    
	    android:text="@string/txtBotonRegistrarme" />

</LinearLayout>
