<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
                android:id="@+id/txtVwLogin"
                style="@style/TxtVwLogin"
                android:text="@string/txtLogin" />

            <EditText
                android:id="@+id/edtTxtEmailLogin"
                style="@style/EdtTxtLogin"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/txtCampoCorreoElectronico" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edtTxtContrasenaLogin"
                style="@style/EdtTxtLogin"
                android:ems="10"                
                android:inputType="textPassword"
                android:hint="@string/txtCampoContrasena" />

            <Button
                android:id="@+id/btnIngresar"
                style="@style/ButtonLogin"
                android:text="@string/txtBotonIngresar" />

            <LinearLayout
                android:id="@+id/loBotonTwitter"
                style="@style/ButtonTwitter" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="6"
                    android:src="@drawable/icono_twitter" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/txtLoginTwitter" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loBotonFacebook"
                style="@style/ButtonFacebook" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="6"
                    android:src="@drawable/icono_facebook" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/txtLoginFacebook" />

            </LinearLayout>          

</LinearLayout>
