<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/borde_layout_registracion" >

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" 
                android:contentDescription="@string/txtImgFotoPerfilDesc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4" >
            <Button
                android:id="@+id/btnBuscarFoto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/txtBotonBuscarFoto"/>
            <Button
                android:id="@+id/btnTomarFoto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/txtBotonSacarFoto" />
        </LinearLayout>
</LinearLayout>
