<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtVwTipoSeleccion"
        style="@style/TxtVwForm"
        android:layout_margin="@dimen/margenFilaForm"
        android:text="Elige el modo de seleccion de equipos" />
    
    <RadioGroup android:id="@+id/radGruopTipoSeleccion"
	    android:orientation="vertical"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margenFilaForm" >
	 
        <RadioButton
            android:id="@+id/radioBtnYoLosArmo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimenElementos"
            android:layout_weight="1"
            android:button="@drawable/fulbito_btn_radio_holo_dark"
            android:layout_margin="@dimen/margenFilaForm"                    
            android:text="@string/txtYolosArmo"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dimenTxtInicio" />

		<RadioButton
		    android:id="@+id/radioBtnPanQueso"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/dimenElementos"
		    android:layout_weight="1"
		    android:button="@drawable/fulbito_btn_radio_holo_dark"
		    android:layout_margin="@dimen/margenFilaForm"
		    android:text="@string/txtPanQueso"
		    android:textColor="#FFFFFF"
		    android:textSize="@dimen/dimenTxtInicio" />
		
		<RadioButton
		    android:id="@+id/radioBtnDosJugadores"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/dimenElementos"
		    android:layout_weight="1"
		    android:button="@drawable/fulbito_btn_radio_holo_dark"
		    android:layout_margin="@dimen/margenFilaForm"
		    android:text="@string/txtDosJugadores"
		    android:textColor="#FFFFFF"
		    android:textSize="@dimen/dimenTxtInicio" />
		
		<RadioButton
		    android:id="@+id/radioBtnAleatorio"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/dimenElementos"
		    android:layout_weight="1"
		    android:button="@drawable/fulbito_btn_radio_holo_dark"
		    android:layout_margin="@dimen/margenFilaForm"
		    android:text="@string/txtAleatorio"
		    android:textColor="#FFFFFF"
		    android:textSize="@dimen/dimenTxtInicio" />
	</RadioGroup>

</LinearLayout>
