<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_layout_sombra" >

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" > 
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="vertical" > 
        		
		    <LinearLayout
		        style="@style/FilaFormulario" >
		        
		        <TextView
	                android:id="@+id/txtVwAlias"
	                style="@style/TxtVwForm"
	                android:text="@string/txtCampoAlias" />
			    
			    <EditText
			        android:id="@+id/edtTxtAlias"
			        style="@style/EdtTxtVwForm" >		        
			    </EditText>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/FilaFormulario" >
			    
			    <TextView
			        android:id="@+id/txtVwFechaNacimiento"
			        style="@style/TxtVwForm"
			        android:text="@string/txtCampoFechaNacimiento" />
		    
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:gravity="center"
			        android:orientation="horizontal" >
			    
			        <EditText
						android:id="@+id/edtFechaNacimiento"
						style="@style/EdtTxtVwForm"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:editable="false" >
					</EditText>
			
			       <ImageButton
			            android:id="@+id/btnFechaNacimiento"
			            android:layout_width="@dimen/dimenElementos"
			            android:layout_height="match_parent"
			            android:layout_marginLeft="@dimen/dimenElementos"
			            android:background="@drawable/boton_interfaz_login"
			            android:src="@drawable/ic_action_edit" />
			       	
			    </LinearLayout>
		    </LinearLayout>
		    
			<LinearLayout
		        style="@style/FilaFormulario" >
			    
				<TextView
			        android:id="@+id/txtVwTelefono"
			        style="@style/TxtVwForm"
			        android:text="@string/txtCampoTelefono" />
			    
			    <EditText
			        android:id="@+id/edtTxtTelefono"
			        android:inputType="phone"
			        style="@style/EdtTxtVwForm" >
			    </EditText>
			    			    			    
		    </LinearLayout>
		    
			<LinearLayout
		        style="@style/FilaFormulario" >
			    
				<TextView
		            android:id="@+id/textView1"
		            style="@style/TxtVwForm"
		            android:text="Sexo" /> 
		        
			    <RadioGroup android:id="@+id/gruporb"
				    android:orientation="horizontal"
				    android:layout_width="match_parent"
				    android:layout_margin="@dimen/margenFilaForm"
				    android:layout_height="@dimen/dimenElementos"
				    android:text="SEXO" >
			 
			        <RadioButton
			            android:id="@+id/radioButton1"
			            style="@style/TxtVwForm"
			            android:text="M"
			            android:layout_weight="1"
			            android:layout_margin="@dimen/margenFilaForm"		
			            android:gravity="center"	            
			        	android:button="@drawable/fulbito_btn_radio_holo_dark" />
			
			        <RadioButton
			            android:id="@+id/radioButton2"
			            style="@style/TxtVwForm"
			            android:text="F"
			            android:layout_weight="1"
			            android:layout_margin="@dimen/margenFilaForm"
			        	android:gravity="center"
			        	android:button="@drawable/fulbito_btn_radio_holo_dark" />
				</RadioGroup>    				    
			     			     
		    </LinearLayout>
			
		</LinearLayout>		    	    	     		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="5"
			android:gravity="center"
			android:orientation="horizontal" >            

		    <Button
				android:id="@+id/btnPassword"
				style="@style/ButtonLogin"
				android:background="@drawable/boton_interfaz_login"
				android:layout_width="match_parent"
				android:layout_height="@dimen/dimenElementos"			
				android:text="@string/txtBotonModificarPassword"				
				android:textStyle="italic"
				android:textColor="#000000"
				android:textSize="@dimen/dimenTxtInicio"
				android:padding="0dp" />
	    
		</LinearLayout>
	    	       
    </LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="6"
		android:gravity="center"
		android:orientation="horizontal" >            

	    <Button
			android:id="@+id/btnGuardarPerfil"
			style="@style/ButtonLogin"
			android:background="@drawable/boton_interfaz_login"
			android:layout_width="match_parent"
			android:layout_height="@dimen/dimenElementos"			
			android:text="@string/txtBotonGuardarCambios"					
			android:textStyle="italic"
			android:textColor="#000000"
			android:textSize="@dimen/dimenTxtInicio"
			android:padding="0dp"
		/>
	    
	</LinearLayout>
	
</LinearLayout>
